syntax = "proto2";

package crypto.pb;

option go_package = "github.com/libp2p/go-libp2p/core/crypto/pb";

enum KeyType {
	RSA = 0;
	Ed25519 = 1;
	Secp256k1 = 2;
	ECDSA = 3;
	// Post-Quantum Signature Schemes
	Dilithium2 = 4;
	Dilithium3 = 5;
	Dilithium5 = 6;
	MLDSA44 = 7;
	MLDSA65 = 8;
	MLDSA87 = 9;
	Ed25519Dilithium2 = 10;
	Ed448Dilithium3 = 11;
}

message PublicKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message PrivateKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}
